--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="https://kit.fontawesome.com/3b204adba1.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3b204adba1.js" crossorigin="anonymous"></script>
     <script src="./bootstrap.bundle.js"></script>
@@ -81,8 +80,8 @@
         </div>
     </section>
     <section class="second-one">
-        <div class="photo1">
-            <img src="img/slide 1.webp" alt="">
+        <div class="photo1 poh">
+            <img class="jack" src="img/slide 1.webp" alt="">
         </div>
         <div class="photo1 ppp">
             <p class="text-bold11">Living Rooms</p>
@@ -97,13 +96,13 @@
                 projects featured below.</p>
         </div>
         <div class="photo1 none">
-            <img src="img/templatesdrive_interior_architectural_photography_detail_shot_o_598148fe-d4be-4f3d-bab6-31.jpg"
+            <img class="jack" src="img/templatesdrive_interior_architectural_photography_detail_shot_o_598148fe-d4be-4f3d-bab6-31.jpg"
                 alt="">
         </div>
     </section>
     <section class="second-one">
         <div class="photo1">
-            <img src="img/templatesdrive_httpss_mj_runVynvXCx2JcM_httpss_mj_runSp5QpdSQiS_d197bb94-a669-4563-9957-25.webp"
+            <img class="jack" src="img/templatesdrive_httpss_mj_runVynvXCx2JcM_httpss_mj_runSp5QpdSQiS_d197bb94-a669-4563-9957-25.webp"
                 alt="">
         </div>
         <div class="photo1 ppp">
@@ -119,7 +118,7 @@
                 projects featured below.</p>
         </div>
         <div class="photo1 none">
-            <img src="img/templatesdrive_httpss_mj_run5uFrcH-LPww_httpss_mj_runnv50Lx-7Fk_93c88fd3-2803-45e8-9985-97.webp"
+            <img class="jack" src="img/templatesdrive_httpss_mj_run5uFrcH-LPww_httpss_mj_runnv50Lx-7Fk_93c88fd3-2803-45e8-9985-97.webp"
                 alt="">
         </div>
     </section>
@@ -223,7 +222,7 @@
             <div class="nn nnn1 photo1 flex">
                 <p>"Use this space to share a testimonial quote about the business, its products or its services. Insert a quote from a real customer or client here to build trust and win over site visitors."</p>
                 <p>—Marielle Daxen</p>
-                <div class="fa-solid">
+                <div class="fa-star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -234,7 +233,7 @@
             <div class="nn nnn2 photo1 flex">
                 <p>"Use this space to share a testimonial quote about the business, its products or its services. Insert a quote from a real customer or client here to build trust and win over site visitors."</p>
                 <p>—Adaline Verhoeven</p>
-                <div class="fa-solid">
+                <div class="fa-star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -245,7 +244,7 @@
             <div class="nn nnn3 photo1 flex">
                 <p>"Use this space to share a testimonial quote about the business, its products or its services. Insert a quote from a real customer or client here to build trust and win over site visitors."</p>
                 <p>—Darius Reed</p>
-                <div class="fa-solid">
+                <div class="fa-star">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
